Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- #503 : initialize stack after a reset
- #504 : roles managing local roles restriction (membership tool)
- #505 : Be able to reuse stacks
- #507 : Delegatees managment
- #509 : Inserting people in hierarchical stacks
Bug fixes:
~~~~~~~~~~
- Keep former local roles mapping during non stack flaged transition
  and non stack flaged states for further use.
- stack element available in managed roles expression namespace was always None
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Set the proxy into the datamodel as early as possible during construction.
- Add new methods to basic stack elements and basic stacks to get stack content
  with just user/group ids. This does not change anything for basic objects but
  make it easier to inherit from them when we want to use stack elements that
  store more information than just the user/group id. Basic use case: store the
  date when user/group was added in the stack
- Stack._prepareElement() delegate to stack element registry for
  instance construction.(prefix cast)
- Unify API. Only use pop(). removeElement() method disappeared
- YAGNI (reversed). Remove useless API for direction and locking
stuffs.
- Internal API refactoring